; ModuleID = '/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_spa_misc_os.c_param_set_deadman_synctime.c'
source_filename = "/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_spa_misc_os.c_param_set_deadman_synctime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@spa_mode_global = common dso_local global i64 0, align 8
@spa_namespace_lock = common dso_local global i32 0, align 4
@zfs_deadman_synctime_ms = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @param_set_deadman_synctime(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store %struct.TYPE_4__* null, %struct.TYPE_4__** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call i32 @param_set_ulong(i8* %8, i32* %9)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %2
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @SET_ERROR(i32 %14)
  store i32 %15, i32* %3, align 4
  br label %33

16:                                               ; preds = %2
  %17 = load i64, i64* @spa_mode_global, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %32

19:                                               ; preds = %16
  %20 = call i32 @mutex_enter(i32* @spa_namespace_lock)
  br label %21

21:                                               ; preds = %25, %19
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %23 = call %struct.TYPE_4__* @spa_next(%struct.TYPE_4__* %22)
  store %struct.TYPE_4__* %23, %struct.TYPE_4__** %6, align 8
  %24 = icmp ne %struct.TYPE_4__* %23, null
  br i1 %24, label %25, label %30

25:                                               ; preds = %21
  %26 = load i32, i32* @zfs_deadman_synctime_ms, align 4
  %27 = call i32 @MSEC2NSEC(i32 %26)
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 0
  store i32 %27, i32* %29, align 4
  br label %21

30:                                               ; preds = %21
  %31 = call i32 @mutex_exit(i32* @spa_namespace_lock)
  br label %32

32:                                               ; preds = %30, %16
  store i32 0, i32* %3, align 4
  br label %33

33:                                               ; preds = %32, %13
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i32 @param_set_ulong(i8*, i32*) #1

declare dso_local i32 @SET_ERROR(i32) #1

declare dso_local i32 @mutex_enter(i32*) #1

declare dso_local %struct.TYPE_4__* @spa_next(%struct.TYPE_4__*) #1

declare dso_local i32 @MSEC2NSEC(i32) #1

declare dso_local i32 @mutex_exit(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
